style(IndexBar): using primary color by default

--- a/packages/vant/src/index-anchor/index.less
+++ b/packages/vant/src/index-anchor/index.less
@@ -6,7 +6,7 @@
   --van-index-anchor-font-size: var(--van-font-size-md);
   --van-index-anchor-line-height: 32px;
   --van-index-anchor-background: transparent;
-  --van-index-anchor-sticky-text-color: var(--van-danger-color);
+  --van-index-anchor-sticky-text-color: var(--van-primary-color);
   --van-index-anchor-sticky-background: var(--van-background-light);
 }
 
