--- a/packages/vant/src/index-bar/index.less
+++ b/packages/vant/src/index-bar/index.less
@@ -2,7 +2,7 @@
   --van-index-bar-sidebar-z-index: 2;
   --van-index-bar-index-font-size: var(--van-font-size-xs);
   --van-index-bar-index-line-height: var(--van-line-height-xs);
-  --van-index-bar-index-active-color: var(--van-danger-color);
+  --van-index-bar-index-active-color: var(--van-primary-color);
 }
 
 .van-index-bar {
