style(Sidebar): using primary color by default

--- a/packages/vant/src/sidebar-item/index.less
+++ b/packages/vant/src/sidebar-item/index.less
@@ -10,7 +10,7 @@
   --van-sidebar-selected-text-color: var(--van-text-color);
   --van-sidebar-selected-border-width: 4px;
   --van-sidebar-selected-border-height: 16px;
-  --van-sidebar-selected-border-color: var(--van-danger-color);
+  --van-sidebar-selected-border-color: var(--van-primary-color);
   --van-sidebar-selected-background: var(--van-background-light);
 }
 
