style(Stepper): using primary color by default

--- a/packages/vant/src/stepper/index.less
+++ b/packages/vant/src/stepper/index.less
@@ -3,7 +3,7 @@
   --van-stepper-button-icon-color: var(--van-text-color);
   --van-stepper-button-disabled-color: var(--van-background);
   --van-stepper-button-disabled-icon-color: var(--van-gray-5);
-  --van-stepper-button-round-theme-color: var(--van-danger-color);
+  --van-stepper-button-round-theme-color: var(--van-primary-color);
   --van-stepper-input-width: 32px;
   --van-stepper-input-height: 28px;
   --van-stepper-input-font-size: var(--van-font-size-md);
