--- a/packages/vant/src/tabs/index.less
+++ b/packages/vant/src/tabs/index.less
@@ -4,13 +4,13 @@
   --van-tab-disabled-text-color: var(--van-text-color-3);
   --van-tab-font-size: var(--van-font-size-md);
   --van-tab-line-height: var(--van-line-height-md);
-  --van-tabs-default-color: var(--van-danger-color);
+  --van-tabs-default-color: var(--van-primary-color);
   --van-tabs-line-height: 44px;
   --van-tabs-card-height: 30px;
   --van-tabs-nav-background: var(--van-background-light);
   --van-tabs-bottom-bar-width: 40px;
   --van-tabs-bottom-bar-height: 3px;
-  --van-tabs-bottom-bar-color: var(--van-danger-color);
+  --van-tabs-bottom-bar-color: var(--van-primary-color);
 }
 
 .van-tab {
