style(Button): update default button border color

--- a/packages/vant/src/button/index.less
+++ b/packages/vant/src/button/index.less
@@ -13,7 +13,7 @@
   --van-button-default-font-size: var(--van-font-size-lg);
   --van-button-default-color: var(--van-text-color);
   --van-button-default-background: var(--van-background-light);
-  --van-button-default-border-color: var(--van-border-color);
+  --van-button-default-border-color: var(--van-gray-6);
   --van-button-primary-color: var(--van-white);
   --van-button-primary-background: var(--van-primary-color);
   --van-button-primary-border-color: var(--van-primary-color);
