style(Button): adjust font-smoothing

--- a/packages/vant/src/button/index.less
+++ b/packages/vant/src/button/index.less
@@ -49,6 +49,7 @@
   cursor: pointer;
   transition: opacity var(--van-duration-fast);
   -webkit-appearance: none;
+  -webkit-font-smoothing: auto;
 
   &::before {
     position: absolute;
