style(Steps): update default button border color

--- a/packages/vant/src/step/index.less
+++ b/packages/vant/src/step/index.less
@@ -1,10 +1,10 @@
 :root {
   --van-step-text-color: var(--van-text-color-2);
-  --van-step-active-color: var(--van-success-color);
+  --van-step-active-color: var(--van-primary-color);
   --van-step-process-text-color: var(--van-text-color);
   --van-step-font-size: var(--van-font-size-md);
   --van-step-line-color: var(--van-border-color);
-  --van-step-finish-line-color: var(--van-success-color);
+  --van-step-finish-line-color: var(--van-primary-color);
   --van-step-finish-text-color: var(--van-text-color);
   --van-step-icon-size: 12px;
   --van-step-circle-size: 5px;
