fix: del loading

--- a/src/image/index.less
+++ b/src/image/index.less
@@ -42,10 +42,12 @@
   &__loading-icon {
     color: @image-loading-icon-color;
     font-size: @image-loading-icon-size;
+    transform: translateX(50%);
   }
 
   &__error-icon {
     color: @image-error-icon-color;
     font-size: @image-error-icon-size;
+    transform: translateX(50%);
   }
 }
