style: improve cursor of haptics elements

--- a/packages/vant/src/style/base.less
+++ b/packages/vant/src/style/base.less
@@ -31,8 +31,12 @@
   padding-bottom: env(safe-area-inset-bottom);
 }
 
-.van-haptics-feedback:active {
-  opacity: var(--van-active-opacity);
+.van-haptics-feedback {
+  cursor: pointer;
+
+  &:active {
+    opacity: var(--van-active-opacity);
+  }
 }
 
 [class*='van-hairline'] {
