feat(@vant/cli): mobile site support dark mode

--- a/packages/vant-cli/site/common/style/vars.less
+++ b/packages/vant-cli/site/common/style/vars.less
@@ -1,4 +1,4 @@
-:root {
+body {
   // colors
   --van-doc-black: #1a1a1a;
   --van-doc-white: #fff;
@@ -55,9 +55,9 @@
   --van-doc-link-color: #1bb5fe;
 
   // background
-  --van-doc-background: var(--van-doc-black);
+  --van-doc-background: #202124;
   --van-doc-background-light: rgba(255, 255, 255, 0.06);
-  --van-doc-header-background: #011428;
+  --van-doc-header-background: rgba(1, 31, 60, 0.3);
   --van-doc-border-color: #3a3a3c;
   --van-doc-shadow-color: transparent;
 
