refactor: attach css variables to body element

--- a/packages/vant/src/button/index.less
+++ b/packages/vant/src/button/index.less
@@ -1,4 +1,4 @@
-:root {
+body {
   --van-button-mini-height: 24px;
   --van-button-mini-padding: 0 var(--van-padding-base);
   --van-button-mini-font-size: var(--van-font-size-xs);
@@ -33,6 +33,10 @@
   --van-button-disabled-opacity: var(--van-disabled-opacity);
   --van-button-icon-size: 1.2em;
   --van-button-loading-icon-size: 20px;
+}
+
+.van-theme-dark {
+  --van-button-plain-background: transparent;
 }
 
 .van-button {
