--- a/packages/vant/src/calendar/index.less
+++ b/packages/vant/src/calendar/index.less
@@ -1,4 +1,4 @@
-:root {
+body {
   --van-calendar-background: var(--van-background-light);
   --van-calendar-popup-height: 80%;
   --van-calendar-header-shadow: 0 2px 10px rgba(125, 126, 128, 0.16);
@@ -24,6 +24,11 @@
   --van-calendar-day-disabled-color: var(--van-text-color-3);
   --van-calendar-confirm-button-height: 36px;
   --van-calendar-confirm-button-margin: 7px 0;
+}
+
+.van-theme-dark {
+  --van-calendar-month-mark-color: rgba(100, 101, 102, 0.2);
+  --van-calendar-day-disabled-color: var(--van-gray-7);
 }
 
 .van-calendar {
