--- a/packages/vant/src/dropdown-menu/index.less
+++ b/packages/vant/src/dropdown-menu/index.less
@@ -1,4 +1,4 @@
-:root {
+body {
   --van-dropdown-menu-height: 48px;
   --van-dropdown-menu-background: var(--van-background-light);
   --van-dropdown-menu-shadow: 0 2px 12px rgba(100, 101, 102, 0.12);
