--- a/packages/vant/src/empty/index.less
+++ b/packages/vant/src/empty/index.less
@@ -1,4 +1,4 @@
-:root {
+body {
   --van-empty-padding: var(--van-padding-xl) 0;
   --van-empty-image-size: 160px;
   --van-empty-description-margin-top: var(--van-padding-md);
