--- a/packages/vant/src/nav-bar/index.less
+++ b/packages/vant/src/nav-bar/index.less
@@ -1,4 +1,4 @@
-:root {
+body {
   --van-nav-bar-height: 46px;
   --van-nav-bar-background: var(--van-background-light);
   --van-nav-bar-arrow-size: 16px;
