--- a/packages/vant/src/popover/index.less
+++ b/packages/vant/src/popover/index.less
@@ -1,4 +1,4 @@
-:root {
+body {
   --van-popover-arrow-size: 6px;
   --van-popover-radius: var(--van-radius-lg);
   --van-popover-action-width: 128px;
