--- a/packages/vant/src/popup/index.less
+++ b/packages/vant/src/popup/index.less
@@ -1,4 +1,4 @@
-:root {
+body {
   --van-popup-background: var(--van-background-light);
   --van-popup-transition: transform var(--van-duration-base);
   --van-popup-round-radius: 16px;
