--- a/packages/vant/src/rate/index.less
+++ b/packages/vant/src/rate/index.less
@@ -1,4 +1,4 @@
-:root {
+body {
   --van-rate-icon-size: 20px;
   --van-rate-icon-gutter: var(--van-padding-base);
   --van-rate-icon-void-color: var(--van-gray-5);
