--- a/packages/vant/src/search/index.less
+++ b/packages/vant/src/search/index.less
@@ -1,4 +1,4 @@
-:root {
+body {
   --van-search-padding: 10px var(--van-padding-sm);
   --van-search-background: var(--van-background-light);
   --van-search-content-background: var(--van-gray-1);
