--- a/packages/vant/src/skeleton/index.less
+++ b/packages/vant/src/skeleton/index.less
@@ -1,4 +1,4 @@
-:root {
+body {
   --van-skeleton-row-height: 16px;
   --van-skeleton-row-background: var(--van-active-color);
   --van-skeleton-row-margin-top: var(--van-padding-sm);
