--- a/packages/vant/src/stepper/index.less
+++ b/packages/vant/src/stepper/index.less
@@ -1,4 +1,4 @@
-:root {
+body {
   --van-stepper-background: var(--van-active-color);
   --van-stepper-button-icon-color: var(--van-text-color);
   --van-stepper-button-disabled-color: var(--van-background);
