--- a/packages/vant/src/submit-bar/index.less
+++ b/packages/vant/src/submit-bar/index.less
@@ -1,4 +1,4 @@
-:root {
+body {
   --van-submit-bar-height: 50px;
   --van-submit-bar-z-index: 100;
   --van-submit-bar-background: var(--van-background-light);
