--- a/packages/vant/src/address-edit/index.less
+++ b/packages/vant/src/address-edit/index.less
@@ -1,4 +1,4 @@
-:root {
+body {
   --van-address-edit-padding: var(--van-padding-sm);
   --van-address-edit-buttons-padding: var(--van-padding-xl)
     var(--van-padding-base);
