--- a/packages/vant/src/cell/index.less
+++ b/packages/vant/src/cell/index.less
@@ -1,6 +1,6 @@
 @import '../style/mixins/hairline';
 
-:root {
+body {
   --van-cell-font-size: var(--van-font-size-md);
   --van-cell-line-height: 24px;
   --van-cell-vertical-padding: 10px;
