--- a/packages/vant/src/circle/index.less
+++ b/packages/vant/src/circle/index.less
@@ -1,4 +1,4 @@
-:root {
+body {
   --van-circle-size: 100px;
   --van-circle-color: var(--van-primary-color);
   --van-circle-layer-color: var(--van-white);
