--- a/packages/vant/src/contact-edit/index.less
+++ b/packages/vant/src/contact-edit/index.less
@@ -1,4 +1,4 @@
-:root {
+body {
   --van-contact-edit-padding: var(--van-padding-md);
   --van-contact-edit-fields-radius: var(--van-radius-md);
   --van-contact-edit-buttons-padding: var(--van-padding-xl) 0;
