--- a/packages/vant/src/count-down/index.less
+++ b/packages/vant/src/count-down/index.less
@@ -1,4 +1,4 @@
-:root {
+body {
   --van-count-down-text-color: var(--van-text-color);
   --van-count-down-font-size: var(--van-font-size-md);
   --van-count-down-line-height: var(--van-line-height-md);
