--- a/packages/vant/src/divider/index.less
+++ b/packages/vant/src/divider/index.less
@@ -1,4 +1,4 @@
-:root {
+body {
   --van-divider-margin: var(--van-padding-md) 0;
   --van-divider-text-color: var(--van-text-color-2);
   --van-divider-font-size: var(--van-font-size-md);
