--- a/packages/vant/src/loading/index.less
+++ b/packages/vant/src/loading/index.less
@@ -1,4 +1,4 @@
-:root {
+body {
   --van-loading-text-color: var(--van-text-color-2);
   --van-loading-text-font-size: var(--van-font-size-md);
   --van-loading-spinner-color: var(--van-gray-5);
