--- a/packages/vant/src/notify/index.less
+++ b/packages/vant/src/notify/index.less
@@ -1,4 +1,4 @@
-:root {
+body {
   --van-notify-text-color: var(--van-white);
   --van-notify-padding: var(--van-padding-xs) var(--van-padding-md);
   --van-notify-font-size: var(--van-font-size-md);
