--- a/packages/vant/src/number-keyboard/index.less
+++ b/packages/vant/src/number-keyboard/index.less
@@ -1,4 +1,4 @@
-:root {
+body {
   --van-number-keyboard-background: var(--van-gray-2);
   --van-number-keyboard-key-height: 48px;
   --van-number-keyboard-key-font-size: 28px;
@@ -14,6 +14,12 @@
   --van-number-keyboard-button-text-color: var(--van-white);
   --van-number-keyboard-button-background: var(--van-primary-color);
   --van-number-keyboard-z-index: 100;
+}
+
+.van-theme-dark {
+  --van-number-keyboard-background: var(--van-gray-8);
+  --van-number-keyboard-key-background: var(--van-gray-7);
+  --van-number-keyboard-key-active-color: var(--van-gray-6);
 }
 
 .van-number-keyboard {
