--- a/packages/vant/src/sidebar-item/index.less
+++ b/packages/vant/src/sidebar-item/index.less
@@ -1,4 +1,4 @@
-:root {
+body {
   --van-sidebar-font-size: var(--van-font-size-md);
   --van-sidebar-line-height: var(--van-line-height-md);
   --van-sidebar-text-color: var(--van-text-color);
