--- a/packages/vant/src/slider/index.less
+++ b/packages/vant/src/slider/index.less
@@ -1,4 +1,4 @@
-:root {
+body {
   --van-slider-active-background: var(--van-primary-color);
   --van-slider-inactive-background: var(--van-gray-3);
   --van-slider-disabled-opacity: var(--van-disabled-opacity);
