--- a/packages/vant/src/toast/index.less
+++ b/packages/vant/src/toast/index.less
@@ -1,4 +1,4 @@
-:root {
+body {
   --van-toast-max-width: 70%;
   --van-toast-font-size: var(--van-font-size-md);
   --van-toast-text-color: var(--van-white);
