feat: add dark mode basic variables

--- a/packages/vant/src/style/css-variables.less
+++ b/packages/vant/src/style/css-variables.less
@@ -1,4 +1,4 @@
-:root {
+body {
   // Color Palette
   --van-black: #000;
   --van-white: #fff;
@@ -75,4 +75,14 @@
   --van-radius-md: 4px;
   --van-radius-lg: 8px;
   --van-radius-max: 999px;
+}
+
+.van-theme-dark {
+  --van-text-color: #f5f5f5;
+  --van-text-color-secondary: #707070;
+  --van-text-color-tertiary: #4d4d4d;
+  --van-border-color: #3a3a3c;
+  --van-active-color: #3a3a3c;
+  --van-background: #000;
+  --van-background-light: #2c2c2e;
 }
