style(@vant/cli): improve demo style in dark mode

--- a/packages/vant-cli/site/common/style/vars.less
+++ b/packages/vant-cli/site/common/style/vars.less
@@ -28,6 +28,7 @@ body {
   --van-doc-text-color-1: var(--van-doc-black);
   --van-doc-text-color-2: var(--van-doc-gray-8);
   --van-doc-text-color-3: #34495e;
+  --van-doc-text-color-4: var(--van-doc-gray-6);
   --van-doc-link-color: var(--van-doc-blue);
 
   // background
@@ -52,6 +53,7 @@ body {
   --van-doc-text-color-1: var(--van-doc-white);
   --van-doc-text-color-2: rgba(255, 255, 255, 0.9);
   --van-doc-text-color-3: rgba(255, 255, 255, 0.75);
+  --van-doc-text-color-4: rgba(255, 255, 255, 0.6);
   --van-doc-link-color: #1bb5fe;
 
   // background
