--- a/packages/vant-cli/site/common/style/vars.less
+++ b/packages/vant-cli/site/common/style/vars.less
@@ -1,6 +1,6 @@
 body {
   // colors
-  --van-doc-black: #1a1a1a;
+  --van-doc-black: #000;
   --van-doc-white: #fff;
   --van-doc-gray-1: #f7f8fa;
   --van-doc-gray-2: #f2f3f5;
@@ -32,11 +32,11 @@ body {
   --van-doc-link-color: var(--van-doc-blue);
 
   // background
-  --van-doc-background: #f7f8fa;
-  --van-doc-background-light: var(--van-doc-white);
+  --van-doc-background: #eeeff2;
+  --van-doc-background-2: var(--van-doc-white);
+  --van-doc-background-3: var(--van-doc-white);
   --van-doc-header-background: #011f3c;
   --van-doc-border-color: var(--van-doc-gray-2);
-  --van-doc-shadow-color: var(--van-doc-gray-3);
 
   // code
   --van-doc-code-color: #58727e;
@@ -58,10 +58,10 @@ body {
 
   // background
   --van-doc-background: #202124;
-  --van-doc-background-light: rgba(255, 255, 255, 0.06);
+  --van-doc-background-2: rgba(255, 255, 255, 0.06);
+  --van-doc-background-3: rgba(255, 255, 255, 0.1);
   --van-doc-header-background: rgba(1, 31, 60, 0.3);
   --van-doc-border-color: #3a3a3c;
-  --van-doc-shadow-color: transparent;
 
   // code
   --van-doc-code-color: rgba(200, 200, 200, 0.85);
