style(Field): adjust label color

--- a/packages/vant/src/field/index.less
+++ b/packages/vant/src/field/index.less
@@ -1,6 +1,6 @@
 body {
   --van-field-label-width: 6.2em;
-  --van-field-label-color: var(--van-gray-7);
+  --van-field-label-color: var(--van-text-color);
   --van-field-label-margin-right: var(--van-padding-sm);
   --van-field-input-text-color: var(--van-text-color);
   --van-field-input-error-text-color: var(--van-danger-color);
