--- a/packages/vant/src/tabbar-item/index.less
+++ b/packages/vant/src/tabbar-item/index.less
@@ -1,6 +1,6 @@
 body {
   --van-tabbar-item-font-size: var(--van-font-size-sm);
-  --van-tabbar-item-text-color: var(--van-gray-7);
+  --van-tabbar-item-text-color: var(--van-text-color);
   --van-tabbar-item-active-color: var(--van-primary-color);
   --van-tabbar-item-active-background: var(--van-background-2);
   --van-tabbar-item-line-height: 1;
