--- a/packages/vant/src/slider/index.less
+++ b/packages/vant/src/slider/index.less
@@ -10,6 +10,10 @@ body {
   --van-slider-button-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
 }
 
+.van-theme-dark {
+  --van-slider-inactive-background: var(--van-background-3);
+}
+
 .van-slider {
   position: relative;
   width: 100%;
