--- a/packages/vant/src/grid-item/index.less
+++ b/packages/vant/src/grid-item/index.less
@@ -3,7 +3,7 @@ body {
   --van-grid-item-content-background: var(--van-background-2);
   --van-grid-item-content-active-color: var(--van-active-color);
   --van-grid-item-icon-size: 28px;
-  --van-grid-item-text-color: var(--van-gray-7);
+  --van-grid-item-text-color: var(--van-text-color);
   --van-grid-item-text-font-size: var(--van-font-size-sm);
 }
 
