style(Card): improve card mode style

--- a/packages/vant/src/card/index.less
+++ b/packages/vant/src/card/index.less
@@ -2,13 +2,13 @@ body {
   --van-card-padding: var(--van-padding-xs) var(--van-padding-md);
   --van-card-font-size: var(--van-font-size-sm);
   --van-card-text-color: var(--van-text-color);
-  --van-card-background: var(--van-gray-1);
+  --van-card-background: var(--van-background);
   --van-card-thumb-size: 88px;
   --van-card-thumb-radius: var(--van-radius-lg);
   --van-card-title-line-height: 16px;
-  --van-card-desc-color: var(--van-gray-7);
+  --van-card-desc-color: var(--van-text-color-2);
   --van-card-desc-line-height: var(--van-line-height-md);
-  --van-card-price-color: var(--van-gray-8);
+  --van-card-price-color: var(--van-text-color);
   --van-card-origin-price-color: var(--van-text-color-2);
   --van-card-num-color: var(--van-text-color-2);
   --van-card-origin-price-font-size: var(--van-font-size-xs);
