style(CouponList): update field background color in dark mode

--- a/packages/vant/src/action-bar-icon/index.less
+++ b/packages/vant/src/action-bar-icon/index.less
@@ -5,7 +5,7 @@ body {
   --van-action-bar-icon-size: 18px;
   --van-action-bar-icon-font-size: var(--van-font-size-xs);
   --van-action-bar-icon-active-color: var(--van-active-color);
-  --van-action-bar-icon-text-color: var(--van-gray-7);
+  --van-action-bar-icon-text-color: var(--van-text-color);
   --van-action-bar-icon-background: var(--van-background-2);
 }
 
