--- a/packages/vant/src/coupon-list/index.less
+++ b/packages/vant/src/coupon-list/index.less
@@ -21,7 +21,7 @@ body {
       height: 34px;
       padding-left: var(--van-padding-sm);
       line-height: 34px;
-      background: var(--van-gray-1);
+      background: var(--van-background);
       border-radius: 17px;
 
       &::placeholder {
