style: update van doc background

--- a/packages/vant-cli/site/common/style/vars.less
+++ b/packages/vant-cli/site/common/style/vars.less
@@ -32,7 +32,7 @@ body {
   --van-doc-link-color: var(--van-doc-blue);
 
   // background
-  --van-doc-background: #eeeff2;
+  --van-doc-background: #eff2f5;
   --van-doc-background-2: var(--van-doc-white);
   --van-doc-background-3: var(--van-doc-white);
   --van-doc-header-background: #011f3c;
