style(SubmitBar): using english colon

--- a/packages/vant/src/submit-bar/index.less
+++ b/packages/vant/src/submit-bar/index.less
@@ -78,6 +78,7 @@
     color: var(--van-submit-bar-price-color);
     font-weight: var(--van-font-weight-bold);
     font-size: var(--van-submit-bar-price-font-size);
+    margin-left: var(--van-padding-base);
 
     &-integer {
       font-size: var(--van-submit-bar-price-integer-font-size);
