--- a/packages/vant/src/contact-list/index.less
+++ b/packages/vant/src/contact-list/index.less
@@ -1,8 +1,8 @@
 body {
   --van-contact-list-edit-icon-size: 16px;
   --van-contact-list-add-button-z-index: 999;
+  --van-contact-list-radio-color: var(--van-primary-color);
   --van-contact-list-item-padding: var(--van-padding-md);
-  --van-contact-list-item-radio-icon-color: var(--van-danger-color);
 }
 
 .van-contact-list {
@@ -42,8 +42,8 @@ body {
 
   &__radio {
     .van-radio__icon--checked .van-icon {
-      background-color: var(--van-contact-list-item-radio-icon-color);
-      border-color: var(--van-contact-list-item-radio-icon-color);
+      background-color: var(--van-contact-list-radio-color);
+      border-color: var(--van-contact-list-radio-color);
     }
   }
 
