style(CouponList): change default color

--- a/packages/vant/src/coupon-list/index.less
+++ b/packages/vant/src/coupon-list/index.less
@@ -22,7 +22,7 @@ body {
       padding-left: var(--van-padding-sm);
       line-height: 34px;
       background: var(--van-background);
-      border-radius: 17px;
+      border-radius: var(--van-radius-max);
 
       &::placeholder {
         color: var(--van-text-color-3);
