--- a/packages/vant/src/address-list/index.less
+++ b/packages/vant/src/address-list/index.less
@@ -10,7 +10,7 @@ body {
   --van-address-list-item-disabled-text-color: var(--van-text-color-3);
   --van-address-list-item-font-size: 13px;
   --van-address-list-item-line-height: var(--van-line-height-sm);
-  --van-address-list-item-radio-icon-color: var(--van-danger-color);
+  --van-address-list-radio-color: var(--van-primary-color);
   --van-address-list-edit-icon-size: 20px;
 }
 
@@ -104,7 +104,7 @@ body {
   }
 
   .van-radio__icon--checked .van-icon {
-    background-color: var(--van-address-list-item-radio-icon-color);
-    border-color: var(--van-address-list-item-radio-icon-color);
+    background-color: var(--van-address-list-radio-color);
+    border-color: var(--van-address-list-radio-color);
   }
 }
