--- a/packages/vant/src/tree-select/index.less
+++ b/packages/vant/src/tree-select/index.less
@@ -4,7 +4,7 @@ body {
   --van-tree-select-content-background: var(--van-background-2);
   --van-tree-select-nav-item-padding: 14px var(--van-padding-sm);
   --van-tree-select-item-height: 48px;
-  --van-tree-select-item-active-color: var(--van-danger-color);
+  --van-tree-select-item-active-color: var(--van-primary-color);
   --van-tree-select-item-disabled-color: var(--van-gray-5);
   --van-tree-select-item-selected-size: 16px;
 }
