chore(AddressEdit): avoid using innerHTML

--- a/packages/vant/src/address-edit/index.less
+++ b/packages/vant/src/address-edit/index.less
@@ -33,13 +33,7 @@ body {
     font-size: var(--van-address-edit-button-font-size);
   }
 
-  &-detail {
-    &__search-item {
-      background: var(--van-gray-2);
-    }
-
-    &__keyword {
-      color: var(--van-danger-color);
-    }
+  &-detail__search-item {
+    background: var(--van-gray-2);
   }
 }
