chore: fix Cell usage

--- a/packages/vant/src/contact-card/index.less
+++ b/packages/vant/src/contact-card/index.less
@@ -2,15 +2,15 @@ body {
   --van-contact-card-padding: var(--van-padding-md);
   --van-contact-card-add-icon-size: 40px;
   --van-contact-card-add-icon-color: var(--van-primary-color);
-  --van-contact-card-value-line-height: var(--van-line-height-md);
+  --van-contact-card-title-line-height: var(--van-line-height-md);
 }
 
 .van-contact-card {
   padding: var(--van-contact-card-padding);
 
-  &__value {
+  &__title {
     margin-left: 5px;
-    line-height: var(--van-contact-card-value-line-height);
+    line-height: var(--van-contact-card-title-line-height);
   }
 
   &--add {
