--- a/packages/vant/src/contact-list/index.less
+++ b/packages/vant/src/contact-list/index.less
@@ -14,7 +14,7 @@ body {
     padding: var(--van-contact-list-item-padding);
   }
 
-  &__item-value {
+  &__item-title {
     display: flex;
     align-items: center;
     padding-right: var(--van-padding-xl);
