解决Picker和Calendar组件的Title在深色模式下为黑色的问题

--- a/packages/vant/src/calendar/index.less
+++ b/packages/vant/src/calendar/index.less
@@ -61,6 +61,7 @@ body {
   &__month-title,
   &__header-title,
   &__header-subtitle {
+    color: var(--van-text-color);
     height: var(--van-calendar-header-title-height);
     font-weight: var(--van-font-bold);
     line-height: var(--van-calendar-header-title-height);
