feat(CalendarDay): add default margin-bottom 10px

--- a/packages/vant/src/calendar/index.less
+++ b/packages/vant/src/calendar/index.less
@@ -125,6 +125,7 @@
     height: var(--van-calendar-day-height);
     font-size: var(--van-calendar-day-font-size);
     cursor: pointer;
+    margin-bottom: 10px;
 
     &--end,
     &--start,
