feat(CalendarDay): add default margin-bottom (#10441)
* feat(CalendarDay): add default margin-bottom 10px

* feat(Calendar): add --van-calendar-day-margin-bottom

* fix(CalendarDay): adjust marginBottom of day

* docs(Calendar): add --van-calendar-day-margin-bottom

* Update README.md

* Update README.zh-CN.md

Co-authored-by: neverland <chenjiahan.jait@bytedance.com>
Co-authored-by: neverland <chenjiahan@youzan.com>

--- a/packages/vant/src/calendar/index.less
+++ b/packages/vant/src/calendar/index.less
@@ -14,6 +14,7 @@
   --van-calendar-month-mark-font-size: @calendar-month-mark-font-size;
   --van-calendar-day-height: @calendar-day-height;
   --van-calendar-day-font-size: @calendar-day-font-size;
+  --van-calendar-day-margin-bottom: @calendar-day-margin-bottom;
   --van-calendar-range-edge-color: @calendar-range-edge-color;
   --van-calendar-range-edge-background-color: @calendar-range-edge-background-color;
   --van-calendar-range-middle-color: @calendar-range-middle-color;
@@ -124,6 +125,7 @@
     width: 14.285%;
     height: var(--van-calendar-day-height);
     font-size: var(--van-calendar-day-font-size);
+    margin-bottom: var(--van-calendar-day-margin-bottom);
     cursor: pointer;
 
     &--end,
