--- a/packages/vant/src/calendar/var.less
+++ b/packages/vant/src/calendar/var.less
@@ -13,6 +13,7 @@
 @calendar-month-mark-font-size: 160px;
 @calendar-day-height: 64px;
 @calendar-day-font-size: var(--van-font-size-lg);
+@calendar-day-margin-bottom: 4px;
 @calendar-range-edge-color: var(--van-white);
 @calendar-range-edge-background-color: var(--van-danger-color);
 @calendar-range-middle-color: var(--van-danger-color);
