fix: 某些情况下 pull-refresh 无法滚动

--- a/packages/vant/src/pull-refresh/index.less
+++ b/packages/vant/src/pull-refresh/index.less
@@ -6,7 +6,12 @@ body {
 }
 
 .van-pull-refresh {
-  overflow: hidden;
+  overflow-y: scroll;
+  overflow-x: hidden;
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
 
   &__track {
     position: relative;
