--- a/src/style/third.less
+++ b/src/style/third.less
@@ -144,6 +144,7 @@ div[root-app] .l-root-h5 {
 
     span {
       display: flex;
+      flex: 1;
       height: 100%;
       justify-content:center;
       align-items: center;
