fix: 同步cloudui的组件列表功能@0.12.7

--- a/src/for-components/for.less
+++ b/src/for-components/for.less
@@ -1,12 +1,5 @@
 .van-for-com-frag {
   display: flex;
-  overflow-x: auto;
-  // flex-wrap: wrap;
-  -ms-overflow-style: none;  /* IE and Edge */
-  scrollbar-width: none;  /* Firefox */
-  white-space: nowrap;
-}
-
-.van-for-com-frag::-webkit-scrollbar {
-  display: none;
+  flex-basis: auto;
+  flex-wrap: wrap;
 }
