--- a/src/cardu/cardu.less
+++ b/src/cardu/cardu.less
@@ -2,10 +2,10 @@
   background-color: #fff;
 
   &--border {
-
+    border: 0.5px solid #E5E5E5;
   }
   &--shadow {
-
+    box-shadow: 0px 2px 12px rgba(0, 0, 0, 0.06);
   }
   &--sr {
     border-radius: 10px;
