--- a/src/cardu/cardu.less
+++ b/src/cardu/cardu.less
@@ -1,5 +1,6 @@
 .van-cardu__wrap {
-  padding: 12px 16px;
+  // padding: 12px 16px;
+  padding-bottom: 10px;
   background-color: #fff;
 
   &--border {
@@ -15,4 +16,17 @@
   .van-divider {
     margin: 0;
   }
+  &--image {
+    padding: 0;
+    padding-bottom: 10px;
+  }
+}
+.van-cardu__head {
+    line-height: 1;
+    margin-bottom: 8px;
+    margin-top: 12px;
+    margin-left: 12px;
+}
+.van-cardu__content {
+  margin-left: 12px;
 }
