--- a/src/cardu/cardu.less
+++ b/src/cardu/cardu.less
@@ -20,6 +20,9 @@
     padding: 0;
     padding-bottom: 10px;
   }
+  .van-image {
+    display: block;
+  }
 }
 .van-cardu__head {
     line-height: 1;
