fix: fieldtextarea 当父元素设置高度了 要等高父元素 （教练实际场景反馈）

--- a/src/fieldtextarea/index.less
+++ b/src/fieldtextarea/index.less
@@ -54,6 +54,8 @@
       display: flex;
       align-items: center;
       min-height: @cell-line-height;
+
+      height: 100%;
     }
 
     // for ios wechat
