--- a/src/style/third.less
+++ b/src/style/third.less
@@ -7,6 +7,10 @@
 div[root-app] .l-root-h5 {
   height: 100%;
   padding-bottom: 0px;
+
+  & > .van-divider:first-child {
+    margin-top: 0;
+  }
 }
 .h5template-login-wrap {
   height: 100vh;
