fix: 自定义图标 默认色号666

--- a/src/iconv/index.less
+++ b/src/iconv/index.less
@@ -24,6 +24,9 @@
     font-size: 14px;
     color: #666;
   }
+  &__cus {
+    color: #666;
+  }
   &:before {
     padding: 8px;
     display: block;
