--- a/src/cellson/index.less
+++ b/src/cellson/index.less
@@ -113,4 +113,11 @@
   &--nocontentforlink {
     flex-direction: row-reverse;
   }
+  &--insel {
+    margin: 0;
+    padding: 0;
+    .van-field__label {
+      margin-left: 0;
+    }
+  }
 }
