暂时恢复cellson的样式 for 12.12

--- a/src/cellson/index.less
+++ b/src/cellson/index.less
@@ -6,15 +6,15 @@
   display: flex;
   box-sizing: border-box;
   width: 100%;
-  // padding: 14px 16px;
-  margin-top: 10px;
-  margin-bottom: 10px;
+  padding: 14px 16px;
+  // margin-top: 10px;
+  // margin-bottom: 10px;
   padding: 0 16px;
   overflow: hidden;
   color: @cell-text-color;
   font-size: @cell-font-size;
   line-height: 22px;
-  // min-height: 50px;
+  min-height: 50px;
   background-color: @cell-background-color;
 
   &::after {
