feat: 表单项左侧属性改造成左侧文本 1

--- a/src/field/index.less
+++ b/src/field/index.less
@@ -19,7 +19,9 @@
       text-align: right;
     }
   }
-
+  &__labelhasslots {
+    width: auto;
+  }
   &--disabled {
     .van-field__label {
       color: @field-disabled-text-color;
