--- a/src/iconv/index.less
+++ b/src/iconv/index.less
@@ -24,8 +24,16 @@
     font-size: 14px;
     color: #666;
   }
+  &__slot--inline {
+    display: inline-block;
+  }
   &__cus {
     // color: #666;
+    line-height: 1;
+  }
+  &__flex {
+    display: inline-flex;
+    align-items: center;
   }
   &:before {
     padding: 8px;
