--- a/packages/vant/src/search/index.less
+++ b/packages/vant/src/search/index.less
@@ -43,7 +43,7 @@
   &__field {
     flex: 1;
     align-items: center;
-    padding: 5px var(--van-padding-xs) 5px 0;
+    padding: 0 var(--van-padding-xs) 0 0;
     height: var(--van-search-input-height);
     background-color: transparent;
 
