--- a/packages/vant/src/search/index.less
+++ b/packages/vant/src/search/index.less
@@ -42,7 +42,9 @@
 
   &__field {
     flex: 1;
-    padding: 5px var(--van-padding-xs) 5px 0;
+    align-items: center;
+    padding: 0 var(--van-padding-xs) 0 0;
+    height: var(--van-search-input-height);
     background-color: transparent;
 
     .van-field__left-icon {
