fix: cardu add margin-right

--- a/src/cardu/cardu.less
+++ b/src/cardu/cardu.less
@@ -29,7 +29,9 @@
     margin-bottom: 8px;
     margin-top: 12px;
     margin-left: 12px;
+    margin-right: 12px;
 }
 .van-cardu__content {
   margin-left: 12px;
+  margin-right: 12px;
 }
