feat: 恢复stepper add stepper-new 2

--- a/src/stepper-new/index.less
+++ b/src/stepper-new/index.less
@@ -100,12 +100,12 @@
   }
 
   &--round {
-    .van-stepper__input {
+    .van-stepper-new__input {
       background-color: transparent;
     }
 
-    .van-stepper__plus,
-    .van-stepper__minus {
+    .van-stepper-new__plus,
+    .van-stepper-new__minus {
       border-radius: 100%;
 
       &:active {
@@ -120,12 +120,12 @@
       }
     }
 
-    .van-stepper__plus {
+    .van-stepper-new__plus {
       color: @white;
       background-color: @stepper-button-round-theme-color;
     }
 
-    .van-stepper__minus {
+    .van-stepper-new__minus {
       color: @stepper-button-round-theme-color;
       background-color: @white;
       border: 1px solid @stepper-button-round-theme-color;
