feat: popover-com 子组件调整 1

--- a/src/popover-combination/index.less
+++ b/src/popover-combination/index.less
@@ -307,11 +307,12 @@
   .van-popover-combination-item {
     &__action {
       position: relative;
-      display: flex;
+      // display: flex;
+      display: block;
       align-items: center;
       box-sizing: border-box;
-      width: @popover-action-width;
-      height: @popover-action-height;
+      // width: @popover-action-width;
+      // height: @popover-action-height;
       padding: 0 @padding-md;
       font-size: @popover-action-font-size;
       line-height: @line-height-md;
