fix：textarea 在limitword情况下 字数统计不正常

--- a/src/fieldtextarea/index.less
+++ b/src/fieldtextarea/index.less
@@ -5,6 +5,9 @@
     display: flex;
     width: 100%;
     align-items: center;
+    &--limit {
+      position: relative;
+    }
     &--clearwrap {
       position: relative;
       padding-right: 5px;
