fix: 数字输入在线性布局两端对其中 宽度有问题 去掉默认的宽度

--- a/src/stepper-new/index.less
+++ b/src/stepper-new/index.less
@@ -71,7 +71,7 @@
   &__input {
     flex: 1;
     box-sizing: border-box;
-    width: @stepper-input-width;
+    // width: @stepper-input-width;
     height: @stepper-input-height;
     margin: 0 2px !important;
     padding: 0;
