fix: 数字输入在线性布局两端对其中 宽度有问题 去掉默认的宽度 2

--- a/src/stepper-new/index.less
+++ b/src/stepper-new/index.less
@@ -72,6 +72,7 @@
     flex: 1;
     box-sizing: border-box;
     // width: @stepper-input-width;
+    width: 100%;
     height: @stepper-input-height;
     margin: 0 2px !important;
     padding: 0;
