--- a/packages/vant/src/popup/index.less
+++ b/packages/vant/src/popup/index.less
@@ -25,8 +25,10 @@
 
     &--center {
       top: 50%;
-      left: 50%;
-      transform: translate3d(-50%, -50%, 0);
+      left: 0;
+      right: 0;
+      margin: auto;
+      transform: translateY(-50%);
 
       &.van-popup--round {
         border-radius: var(--van-popup-round-border-radius);
