--- a/packages/vant/src/popup/index.less
+++ b/packages/vant/src/popup/index.less
@@ -27,7 +27,7 @@
       top: 50%;
       left: 0;
       right: 0;
-      margin: auto;
+      margin: 0 auto;
       transform: translateY(-50%);
 
       &.van-popup--round {
