Revert "fix(Popup&Toast): invalid adaptive width (#10961)"
This reverts commit b6dd0cb36c0445e199335c36a4c21e696cf8b073.

--- a/packages/vant/src/popup/index.less
+++ b/packages/vant/src/popup/index.less
@@ -25,10 +25,8 @@
 
     &--center {
       top: 50%;
-      left: 0;
-      right: 0;
-      margin: 0 auto;
-      transform: translateY(-50%);
+      left: 50%;
+      transform: translate3d(-50%, -50%, 0);
 
       &.van-popup--round {
         border-radius: var(--van-popup-round-border-radius);
