feat: 单行单行输入多行输入  对齐继承

--- a/src/fieldinput/index.less
+++ b/src/fieldinput/index.less
@@ -19,7 +19,7 @@
     padding: 0;
     color: @field-input-text-color;
     line-height: inherit;
-    text-align: left;
+    text-align: inherit;
     background-color: transparent;
     border: 0;
     resize: none;
