--- a/src/fieldtextarea/index.less
+++ b/src/fieldtextarea/index.less
@@ -22,7 +22,7 @@
     padding: 0;
     color: @field-input-text-color;
     line-height: inherit;
-    text-align: left;
+    text-align: inherit;
     background-color: transparent;
     border: 0;
     resize: none;
@@ -57,7 +57,6 @@
       display: flex;
       align-items: center;
       min-height: @cell-line-height;
-
       height: 100%;
     }
 
