fix: 登录框有+号站位

--- a/src/style/third.less
+++ b/src/style/third.less
@@ -78,6 +78,12 @@ div[router-view-symbol] .l-root-h5 {
     color: #ffffff;
     border-radius: 1.06667vw;
   }
+  .van-cell__title {
+    display: none;
+  }
+  .van-cellson__title {
+    display: none;
+  }
 }
 
 .h5template-navi {
