fix: attach css variables to :root element

--- a/packages/vant/src/action-bar-button/index.less
+++ b/packages/vant/src/action-bar-button/index.less
@@ -1,4 +1,4 @@
-body {
+:root {
   --van-action-bar-button-height: 40px;
   --van-action-bar-button-warning-color: var(--van-gradient-orange);
   --van-action-bar-button-danger-color: var(--van-gradient-red);
