--- a/packages/vant/src/card/index.less
+++ b/packages/vant/src/card/index.less
@@ -1,4 +1,4 @@
-body {
+:root {
   --van-card-padding: var(--van-padding-xs) var(--van-padding-md);
   --van-card-font-size: var(--van-font-size-sm);
   --van-card-text-color: var(--van-text-color);
