--- a/packages/vant/src/coupon-list/index.less
+++ b/packages/vant/src/coupon-list/index.less
@@ -1,4 +1,4 @@
-body {
+:root {
   --van-coupon-list-background: var(--van-background);
   --van-coupon-list-field-padding: 5px 0 5px var(--van-padding-md);
   --van-coupon-list-exchange-button-height: 32px;
@@ -16,7 +16,7 @@ body {
   &__field {
     padding: var(--van-coupon-list-field-padding);
 
-    .van-field__body {
+    .van-field__:root {
       height: 34px;
       padding-left: var(--van-padding-sm);
       line-height: 34px;
