--- a/packages/vant/src/field/index.less
+++ b/packages/vant/src/field/index.less
@@ -1,4 +1,4 @@
-body {
+:root {
   --van-field-label-width: 6.2em;
   --van-field-label-color: var(--van-text-color);
   --van-field-label-margin-right: var(--van-padding-sm);
