--- a/packages/vant/src/progress/index.less
+++ b/packages/vant/src/progress/index.less
@@ -1,4 +1,4 @@
-body {
+:root {
   --van-progress-height: 4px;
   --van-progress-color: var(--van-primary-color);
   --van-progress-inactive-color: var(--van-gray-5);
