--- a/packages/vant/src/share-sheet/index.less
+++ b/packages/vant/src/share-sheet/index.less
@@ -1,6 +1,6 @@
 @import '../style/mixins/hairline';
 
-body {
+:root {
   --van-share-sheet-header-padding: var(--van-padding-sm) var(--van-padding-md);
   --van-share-sheet-title-color: var(--van-text-color);
   --van-share-sheet-title-font-size: var(--van-font-size-md);
