--- a/packages/vant/src/step/index.less
+++ b/packages/vant/src/step/index.less
@@ -1,4 +1,4 @@
-body {
+:root {
   --van-step-text-color: var(--van-text-color-2);
   --van-step-active-color: var(--van-primary-color);
   --van-step-process-text-color: var(--van-text-color);
