--- a/packages/vant/src/button/index.less
+++ b/packages/vant/src/button/index.less
@@ -1,4 +1,4 @@
-body {
+:root {
   --van-button-mini-height: 24px;
   --van-button-mini-padding: 0 var(--van-padding-base);
   --van-button-mini-font-size: var(--van-font-size-xs);
