--- a/packages/vant/src/image/index.less
+++ b/packages/vant/src/image/index.less
@@ -1,4 +1,4 @@
-body {
+:root {
   --van-image-placeholder-text-color: var(--van-text-color-2);
   --van-image-placeholder-font-size: var(--van-font-size-md);
   --van-image-placeholder-background: var(--van-background);
