--- a/packages/vant/src/list/index.less
+++ b/packages/vant/src/list/index.less
@@ -1,4 +1,4 @@
-body {
+:root {
   --van-list-text-color: var(--van-text-color-2);
   --van-list-text-font-size: var(--van-font-size-md);
   --van-list-text-line-height: 50px;
