--- a/packages/vant/src/search/index.less
+++ b/packages/vant/src/search/index.less
@@ -1,4 +1,4 @@
-body {
+:root {
   --van-search-padding: 10px var(--van-padding-sm);
   --van-search-background: var(--van-background-2);
   --van-search-content-background: var(--van-background);
