--- a/packages/vant/src/tag/index.less
+++ b/packages/vant/src/tag/index.less
@@ -1,4 +1,4 @@
-body {
+:root {
   --van-tag-padding: 0 var(--van-padding-base);
   --van-tag-text-color: var(--van-white);
   --van-tag-font-size: var(--van-font-size-sm);
