fix(Dialog): incorrect transform behavior

--- a/packages/vant/src/dialog/index.less
+++ b/packages/vant/src/dialog/index.less
@@ -132,12 +132,12 @@
   }
 
   &-bounce-enter-from {
-    transform: translate3d(-50%, -50%, 0) scale(0.7);
+    transform: translate3d(0, -50%, 0) scale(0.7);
     opacity: 0;
   }
 
   &-bounce-leave-active {
-    transform: translate3d(-50%, -50%, 0) scale(0.9);
+    transform: translate3d(0, -50%, 0) scale(0.9);
     opacity: 0;
   }
 }
