docs(Field): add label-align demo

--- a/packages/vant/src/field/index.less
+++ b/packages/vant/src/field/index.less
@@ -44,6 +44,7 @@
       display: flex;
       width: 100%;
       text-align: left;
+      margin-bottom: var(--van-padding-base);
     }
 
     &--required {
