feat(ImagePreview): add preview image slot

--- a/packages/vant/src/image-preview/index.less
+++ b/packages/vant/src/image-preview/index.less
@@ -38,7 +38,8 @@
     left: 0;
   }
 
-  &__image {
+  &__image,
+  &__image-wrap {
     width: 100%;
     transition-property: transform;
 
@@ -47,7 +48,8 @@
       height: 100%;
     }
 
-    img {
+    img,
+    video {
       // disable desktop browser image drag
       -webkit-user-drag: none;
     }
